--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>Anadimos esta linea para la prueba de las ramas</p>
     <p>Anadimos otro parrafo diferente a la nueva rama</p>
+    <p>Venga generamos otro conflicto</p>
     <p>Anadimos otro parrafo desde la rama master</p>
 </body>
 </html>
