Realizados cambios temporales

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Anadimos esta linea para la prueba de las ramas</p>
-    <p>Anadimos otro parrafo diferente a la nueva rama</p>
-    <p>Venga generamos otro conflicto</p>
-    <p>Anadimos otro parrafo desde la rama master</p>
+    <header>
+        <h1>Este es el header</h1>
+    </header>
+    <main>
+        <span>Vamos a realizar el cuerpo de la web</span>
+    </main>
+    <footer>
+        <p>Este es el footer.</p>
+    </footer>
 </body>
 </html>
